force-app/main/default/objects/Payment_Schedule__c/Payment_Schedule__c.object-meta.xml
<CustomObject>
    <description>This object is used to stores the payment schedule datas into their respective fields.</description>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Payment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>