force-app/main/default/objects/Payment_Schedule__c/fields/Alternate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Amount__c</fullName>
    <description>Alternate Currency of Legal Entity converted Amount</description>
    <label>Alternate Amount</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>