force-app/main/default/objects/Payment_Schedule__c/fields/Alternate_Currency__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Currency__c</fullName>
    <description>Alternate Currency on Legal Entity</description>
    <label>Alternate Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>