force-app/main/default/objects/Payment_Schedule__c/fields/Amounts__c.field-meta.xml
<CustomField>
    <fullName>Amounts__c</fullName>
    <description>This field will populate the percentage amount from the generated invoice.</description>
    <inlineHelpText>This field will populate the percentage amount from the generated invoice.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>