force-app/main/default/objects/Payment_Schedule__c/fields/Due_Dates__c.field-meta.xml
<CustomField>
    <fullName>Due_Dates__c</fullName>
    <description>This field is used to store the due dates with respect to its parent invoice.</description>
    <inlineHelpText>This field is used to store the due dates with respect to its parent invoice.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>