force-app/main/default/objects/Payment_Schedule__c/fields/Ledger_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Amount__c</fullName>
    <description>Ledger Currency of Legal Entity converted Amount</description>
    <label>Ledger Amount</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>