force-app/main/default/objects/Payment_Schedule__c/fields/Ledger_Currency__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Currency__c</fullName>
    <description>Ledger Currecy of Legal Entity</description>
    <label>Ledger Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>