force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Schedule_Rows__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Rows__c</fullName>
    <description>This field will fetch each rows from invoice field i.e payment schedule revised or payment schedule from quote.</description>
    <inlineHelpText>This field will fetch each rows from invoice field i.e payment schedule revised or payment schedule from quote.</inlineHelpText>
    <label>Payment Schedule Rows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>