force-app/main/default/objects/Payment_Schedule__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>This field will populate the amount percentage.</description>
    <inlineHelpText>This field will populate the amount percentage.</inlineHelpText>
    <label>Percentage %</label>
    <length>100</length>
    <type>Text</type>
</CustomField>