force-app/main/default/objects/Payment_Schedule__c/fields/Tax_LE_Currency__c.field-meta.xml
<CustomField>
    <fullName>Tax_LE_Currency__c</fullName>
    <description>Tax Currency on Legal Entity</description>
    <label>Tax LE Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>