force-app/main/default/objects/Payment_Schedule__c/fields/Tax_LE_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_LE_Exchange_Rate__c</fullName>
    <description>Exchange Rate Conversion Rate</description>
    <label>Tax LE Exchange Rate</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>